2009-01-30  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.24.4

2009-01-31  Matthew Barnes  <mbarnes@redhat.com>

	** Disable debug macros (#define d(x) x) throughout.  (#569638)

2009-01-16  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #360813

	* calendar/e-cal-backend-exchange.h:
	(e_cal_backend_exchange_ensure_utc_zone):
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_ensure_utc_zone):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(modify_task_object), (receive_task_objects):
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href), (receive_objects):
	RFC 2445 - CREATED/DTSTAMP/LAST-MODIFIED always in UTC.

2009-01-12  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.24.3 release

2008-12-23  Ashish Shrivastava  <shashish@novell.com>

	** Part of fix for bug #441712 (bnc)

	* addressbook/e-book-backend-gal.c:
	Exchange fix for GAL issue while loading for bug #441712.
	Unlocking the mutex.

2008-11-24  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.24.2 release changes and release changes

2008-11-20  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540346

	* addressbook/e-book-backend-gal.c: (start_book_view):
	Do not try to fetch contacts when not connected.

	* addressbook/e-book-backend-gal.c: (gal_reconnect), (get_contact),
	(get_contact_list), (build_contact_from_entry), (ldap_search_handler),
	(ldap_search_dtor), (start_book_view), (stop_book_view),
	(parse_page_control), (generate_cache), (authenticate_user),
	(get_supported_auth_methods), (load_source):
	Turn off debug printf-s.

2008-11-20  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #558883

	* camel/camel-exchange-folder.h:
	* camel/camel-exchange-folder.c:
	* camel/camel-exchange-store.c:
	Revert related parts from bug #336074, which caused slow start up.

2008-11-07  Srinivasa Ragavan  <sragavan@novell.com>
